crates/connectors/ndc-cockroach/tests/snapshots/query_tests__predicates__select_where_name_not_like.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 2,
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": 3,
        "Title": "Restless and Wild"
      },
      {
        "AlbumId": 5,
        "Title": "Big Ones"
      },
      {
        "AlbumId": 6,
        "Title": "Jagged Little Pill"
      },
      {
        "AlbumId": 7,
        "Title": "Facelift"
      }
    ]
  }
]
