crates/connectors/ndc-cockroach/tests/snapshots/query_tests__predicates__select_where_related_exists.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "albums": {
          "rows": [
            {
              "title": "Supernatural"
            },
            {
              "title": "Santana - As Years Go By"
            },
            {
              "title": "Santana Live"
            }
          ]
        },
        "title": "Santana"
      }
    ]
  }
]
