crates/connectors/ndc-cockroach/tests/snapshots/query_tests__predicates__select_where_variable.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      },
      {
        "Title": "Garage Inc. (Disc 2)"
      }
    ]
  },
  {
    "rows": [
      {
        "Title": "Beyond Good And Evil"
      }
    ]
  }
]
